Trending/needed skills in India for DA profile

--- a/trending_skills_in_da_india.ipynb
+++ b/trending_skills_in_da_india.ipynb
@@ -1473,7 +1473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 25,
    "id": "b14b76eb",
    "metadata": {},
    "outputs": [
@@ -1502,6 +1502,13 @@
     "plt.xlabel('2023')\n",
     "plt.legend().remove()\n",
     "plt.gca().yaxis.set_major_formatter(PercentFormatter(decimals=0))\n",
+    "\n",
+    "\n",
+    "# {\n",
+    "# Add this line to set tick intervals to 10%\n",
+    "# from matplotlib.ticker import MultipleLocator\n",
+    "# plt.gca().yaxis.set_major_locator(MultipleLocator(10))\n",
+    "# }\n",
     "\n",
     "# annotate the plot with the top 5 skills using plt.text()\n",
     "for i in range(5):\n",
